Fix project banner role font size on mobile

--- a/assets/scss/templates/_portfolio.scss
+++ b/assets/scss/templates/_portfolio.scss
@@ -54,6 +54,9 @@
   font-family: $secondary-font;
   font-size: 3rem;
   margin-bottom: 0;
+  @include mobile {
+    font-size: 1.4rem;
+  }
 }
 
 .page-title {
